--- a/vignettes/CaseStudies/DPMFA_LEON-T_TRWP_casestudy.Rmd
+++ b/vignettes/CaseStudies/DPMFA_LEON-T_TRWP_casestudy.Rmd
@@ -137,6 +137,16 @@ ggplot(Material_Parameters_n |> filter(VarName == PlotVariable) |>
 
 ```
 
+### Fate Factor calculations
+Based on the above parameters and with a generic emission of 1 kg to air, freshwater or roadside soil (othersoil/s3 in SBoo) fate factors are calculation for emission at NL and EU scale for TRWP.
+Seperately following the SBR and NR fractions.
+```{r}
+# run the script:
+source("vignettes/CaseStudies/03ff_get_solution_FateFactors.R")
+
+```
+
+
 # Make batch files for the High Performance Cluster
 Calculating dynamic masses with uncertainty for 1950 to 2050 with 1000 runs takes too
 much computing power to calculate in RStudio. Therefore, a high performance cluster (HPC)
@@ -189,11 +199,26 @@ if(!is.na(source_of_interest) && length(source_of_interest) == 1 && source_of_in
 }
 
 Parameters$Parameter_summary
-Parameters$Material_Parameters_n
+Parameters$Material_Parameters_n$data[[1]]
 
 # Calculate distribution of RadP and RhoP for air and water
-Parameters$Material_Parameters_n |> filter(VarName == RadS)
+Parameters$Material_Parameters_n |> 
+  filter((VarName == "RadS" |VarName == "RhoS") & Polymer == "SBR") |> 
+  unnest(data) |> 
+  pivot_wider()
 
+# goal, get graphs for RadP and RhoP
+PlotVariable = "RadP"
+ggplot(Material_Parameters_n |> filter(VarName == PlotVariable) |> unnest(data), aes(x=value,y=VarName)) +
+  geom_violin()+
+  facet_wrap(vars(Polymer,Source))+
+  xlab(paste(PlotVariable)) + scale_x_log10() 
+
+PlotVariable = "RhoP" 
+ggplot(Material_Parameters_n |> filter(VarName == PlotVariable) |> unnest(data), aes(x=value,y=VarName)) +
+  geom_violin()+
+  facet_wrap(vars(Polymer,Source))+
+  xlab(paste(PlotVariable)) 
 
 ```
 
