--- a/vignettes/CaseStudies/DPMFA_LEON-T_TRWP_casestudy.Rmd
+++ b/vignettes/CaseStudies/DPMFA_LEON-T_TRWP_casestudy.Rmd
@@ -178,7 +178,7 @@ Copy the LSF commands into your linux terminal to run the batch scripts.
 # Define batch parameters for other sources
 batch_n <- 2
 batch_max <- 1000  # Should be a multiple of batch_n for the loop logic to work
-Source <- NA
+Source <- '"Tyre wear"'
 
 source("vignettes/CaseStudies/HPC_batch_files.R")
 ```
