--- a/vignettes/CaseStudies/DPMFA_LEON-T_TRWP_casestudy.Rmd
+++ b/vignettes/CaseStudies/DPMFA_LEON-T_TRWP_casestudy.Rmd
@@ -99,7 +99,7 @@ ggplot(Material_Parameters_n |> filter(VarName == PlotVariable) |>
   xlab(paste(PlotVariable))  + scale_x_log10() 
 
 # load Parameters object from file if not already in memory
-load(paste0("/rivm/r/E121554 LEON-T/03 - uitvoering WP3/Deliverable 3.5/Parameters_LEON-T_D3.5_Other_20241126.RData"))
+load(paste0("/rivm/r/E121554 LEON-T/03 - uitvoering WP3/Deliverable 3.5/Parameters_LEON-T_D3.5_Other_20241127.RData"))
 Material_Parameters_n <- Parameters$Material_Parameters_n
 PlotVariable = "alpha"
 ggplot(Material_Parameters_n |> filter(VarName == PlotVariable & Polymer == "ABS") |> unnest(data), aes(x=value,y=SubCompart)) +
@@ -143,6 +143,7 @@ Seperately following the SBR and NR fractions.
 ```{r}
 # run the script:
 source("vignettes/CaseStudies/03ff_get_solution_FateFactors.R")
+# analysis is done sepeperately using xls.
 
 ```
 
@@ -235,8 +236,6 @@ World$fetchData("RadS")
 # goal, get graphs for RadP and RhoP
 # ggplot(SpeciesP |> filter(SubCompart == "othersoil") ,aes (x=RadP) )+
   # geom_histogram()
-
-plot_data1 <- 
 
 SpeciesP_long <- 
   SpeciesP |> 
